particles as single path defintion

--- a/src/pages/experiments.astro
+++ b/src/pages/experiments.astro
@@ -112,6 +112,11 @@ const pageTitle = "experiments";
                 <span class="description">canvas video shape clipping</span>
                 <span class="counter fill-low"></span>
             </a>
+            <a href="/experiments/particles" class="shadow hover">
+                <span class="label">P</span>
+                <span class="description">particles</span>
+                <span class="counter fill-low"></span>
+            </a>
         </div>
     </div>
 </BaseLayout>
