--- a/src/pages/experiments/web-audio/index.astro
+++ b/src/pages/experiments/web-audio/index.astro
@@ -2,7 +2,7 @@
 import ExpLayout from "../../../layouts/ExpLayout.astro";
 ---
 
-<ExpLayout pageTitle="Web Audio Code Generator" sui tachyons prism={false}>
+<ExpLayout pageTitle="Web Audio Code Generator" sui tachyons prism>
     <div class="ui container" style="padding: 2rem 0;">
         <div class="ui fluid card">
             <div class="content">
@@ -194,7 +194,7 @@ import ExpLayout from "../../../layouts/ExpLayout.astro";
                             >
                                 <pre
                                     style="margin: 0; white-space: pre-wrap; overflow-x: auto;">
-                                    <code id="codeOutput" class="language-javascript">// Your generated code will appear here</code>
+                                    <code id="codeOutput" class="code">// Your generated code will appear here</code>
                                 </pre>
                             </div>
                         </div>
