--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -6,33 +6,26 @@ const pageTitle = "Resume of Joe Maddalone";
 ---
 
 <BaseLayout pageTitle={pageTitle} includeFooter={false}>
-    
-    <div class="ui internally celled grid">
-        <div class="row">
-            <div class="twelve wide column">
-                <h2>Experience</h2>
-                <div class="ui divided items">
-                    {
-                        data.resume.work.map((work) => (
-                            <div class="item">
-                                <div class="content">
-                                    <div class="header">
-                                        {work.company} ({work.from} - {work.to})
-                                    </div>
-                                    <div class="meta i">{work.title}</div>
-                                    <ul>
-                                        {work.highlights.map((highlight) => (
-                                            <li class="meta pt0">
-                                                {highlight}
-                                            </li>
-                                        ))}
-                                    </ul>
-                                </div>
+    <div class="container flex justify-center mt5 pa2">
+
+        <div class="ui divided items">
+            {
+                data.resume.work.map((work) => (
+                    <div class="item">
+                        <div class="content">
+                            <div class="header">
+                                {work.company} ({work.from} - {work.to})
                             </div>
-                        ))
-                    }
-                </div>
-            </div>
+                            <div class="meta i">{work.title}</div>
+                            <ul>
+                                {work.highlights.map((highlight) => (
+                                    <li class="meta pt0">{highlight}</li>
+                                ))}
+                            </ul>
+                        </div>
+                    </div>
+                ))
+            }
         </div>
     </div></BaseLayout
 >
