--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -1,31 +1,237 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
+import "tailwindcss";
 
+import BaseLayout from "../layouts/BaseLayout.astro";
 import data from "./resume.11tydata.json";
 const pageTitle = "Resume of Joe Maddalone";
+import icons from '../components/launcher/icons';
 ---
 
 <BaseLayout pageTitle={pageTitle} includeFooter={false}>
-    <div class="container flex justify-center mt5 pa2">
+  <div class="mt5 mb5">
+    <div class="flex justify-center">
+      <a href="/assets/Joe-Maddalone.pdf" class="border-1 rounded-full px-4 py-2 ma4">PDF <i class="ph ph-bold ph-download"></i></a>
+    </div>
+    <div class="resume container">
+      <div class="heading pa4">
+        <div class="content">
+          I lead teams, mentor developers, close tickets, resolve problems, and
+          invent solutions where others give up.
+        </div>
+      </div>
+        <div class="me pa4">
+          <h2 class="f3">Joe Maddalone</h2>
+          <div class="find flex flex-col items-start gap-y-2 text-sm">
+            <div class="find-item flex items-center gap-x-1.5">
+              <i class="ph ph-bold ph-map-pin"></i><div>Chicago, IL</div>
+            </div>
+            <div class="flex items-center gap-x-1.5">
+              <i class="ph ph-bold ph-phone"></i>
+              <a
+                href="tel:773-593-9645"
+                target="_blank"
+                rel="noreferrer">773-593-9645</a
+              >
+            </div>
+            <div class="find-item flex items-center gap-x-1.5">
+              <i class="ph ph-bold ph-at"></i>
+              <a
+                href="mailto:joe.maddalone@gmail.com"
+                target="_blank"
+                rel="noreferrer">joe.maddalone@gmail.com</a
+              >
+            </div>
+            <div class="find-item flex items-center gap-x-1.5">
+              <i class="ph ph-bold ph-link text-primary group-[.sidebar]:text-background"></i>
+              <a
+                href="https://joemaddalone.com"
+                target="_blank"
+                rel="noreferrer noopener nofollow"
+                class="inline-block">https://joemaddalone.com</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="more pa4">
+          <section id="profiles" class="mb4">
+            <h4 class="mb-2 border-b border-primary text-base font-bold">
+              Profiles
+            </h4><div
+              class="grid gap-x-6 gap-y-3"
+              style="grid-template-columns: repeat(1, 1fr);"
+            >
+              <div class="space-y-1">
+                <div>
+                  <div>
+                    <div class="flex items-center gap-x-1.5">
+                        <a
+                        href="https://github.com/joemaddalone"
+                        target="_blank"
+                        rel="noreferrer noopener nofollow"
+                        class="inline-block">GitHub</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div><div class="space-y-2">
+                <div>
+                  <div>
+                    <div class="flex items-center gap-x-1.5">
+                      <a
+                        href="https://www.linkedin.com/in/joemaddalone/"
+                        target="_blank"
+                        rel="noreferrer noopener nofollow"
+                        class="inline-block">LinkedIn</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div><div class="space-y-2">
+                <div>
+                  <div>
+                    <div class="flex items-center gap-x-1.5">
+                      <a
+                        href="https://youtube.com/joemaddalone"
+                        target="_blank"
+                        rel="noreferrer noopener nofollow"
+                        class="inline-block">YouTube</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
 
-        <div class="ui divided items">
+          <section id="projects" class="">
+            <h4 class="mb-2 border-b border-primary text-base font-bold">
+              Personal Projects
+            </h4><div
+              class="grid gap-x-6 gap-y-3"
+              style="grid-template-columns: repeat(1, 1fr);"
+            >
+              <div class="space-y-2">
+                <div>
+                  <div
+                    class="flex items-start justify-between group-[.sidebar]:flex-col group-[.sidebar]:items-start"
+                  >
+                    <div class="text-left">
+                      <div class="flex items-center gap-x-1.5">
+                        <a
+                          href="https://joemaddalone.github.io/react-svg-path-docs/"
+                          target="_blank"
+                          rel="noreferrer noopener nofollow"
+                          class="inline-block font-bold">react-svg-path</a
+                        >
+                      </div><div>Low level svg path generation for React.</div>
+                    </div><div
+                      class="shrink-0 text-right group-[.sidebar]:text-left"
+                    >
+                      <div class="font-bold"></div>
+                    </div>
+                  </div>
+                </div>
+              </div><div class="space-y-2">
+                <div>
+                  <div
+                    class="flex items-start justify-between group-[.sidebar]:flex-col group-[.sidebar]:items-start"
+                  >
+                    <div class="text-left">
+                      <div class="flex items-center gap-x-1.5">
+                        <a
+                          href="https://reatloop.com"
+                          target="_blank"
+                          rel="noreferrer noopener nofollow"
+                          class="inline-block font-bold">React Loop</a
+                        >
+                      </div><div>
+                        Primary organizer of React Loop conference
+                      </div>
+                    </div><div
+                      class="shrink-0 text-right group-[.sidebar]:text-left"
+                    >
+                      <div class="font-bold"></div>
+                    </div>
+                  </div>
+                </div>
+              </div><div class="space-y-2">
+                <div>
+                  <div
+                    class="flex items-start justify-between group-[.sidebar]:flex-col group-[.sidebar]:items-start"
+                  >
+                    <div class="text-left">
+                      <div class="flex items-center gap-x-1.5">
+                        <a
+                          href="https://egghead.io/q/resources-by-joe-maddalone"
+                          target="_blank"
+                          rel="noreferrer noopener nofollow"
+                          class="inline-block font-bold">egghead.io</a
+                        >
+                      </div><div>Teaching the latest in web technologies</div>
+                    </div><div
+                      class="shrink-0 text-right group-[.sidebar]:text-left"
+                    >
+                      <div class="font-bold"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+      <div class="main pa4">
+        <h4 class="mb-2 border-b border-primary text-base font-bold">
+          Experience
+        </h4>
+
+        <section id="experience" class="grid">
+          <div
+            class="grid gap-x-6 gap-y-3 divide-y divide-neutral-200"
+            style="grid-template-columns: repeat(1, 1fr);"
+          >
             {
-                data.resume.work.map((work) => (
-                    <div class="item">
-                        <div class="content">
-                            <div class="header">
-                                {work.company} ({work.from} - {work.to})
+              data.resume.work.map((work) => (
+                <div class="space-y-2 pb-4">
+                    <div>
+                        <div class="flex items-start justify-between group-[.sidebar]:flex-col group-[.sidebar]:items-start">
+                            <div class="text-left">
+                                <div class="font-bold">{work.company}</div>
+                                <div>{work.title}</div>
                             </div>
-                            <div class="meta i">{work.title}</div>
-                            <ul>
-                                {work.highlights.map((highlight) => (
-                                    <li class="meta pt0">{highlight}</li>
-                                ))}
-                            </ul>
+                            <div class="shrink-0 text-right group-[.sidebar]:text-left">
+                                <div class="font-bold">
+                                  {work.from} to {work.to}
+                                </div>
+                                <div />
+                            </div>
+                        </div>
+                        <div class="flex items-center gap-x-1.5">
+                            {work.url && (
+                            <i class="ph ph-bold ph-link text-primary group-[.sidebar]:text-background" />
+                            <a
+                              href={work.url}
+                              target="_blank"
+                              rel="noreferrer noopener nofollow"
+                              class="inline-block"
+                            >
+                              {work.url}
+                            </a>
+                          )}
                         </div>
                     </div>
-                ))
+                    <div class="wysiwyg">
+                      <ul class="list-disc ml-5">
+                        {work.highlights.map((highlight) => (
+                          <li class="meta pt0">{highlight}</li>
+                        ))}
+                      </ul>
+                    </div>
+                </div>
+              ))
             }
-        </div>
-    </div></BaseLayout
->
+          </div>
+        </section>
+      </div>
+    </div>
+  </div>
+</BaseLayout>
