--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,9 +1,12 @@
 ---
 import BaseLayout from './BaseLayout.astro';
+import Prose from '../components/Prose.astro';
 const { frontmatter } = Astro.props;
 ---
 <BaseLayout>
   <div class="standard-article">
-    <slot />
+    <Prose>
+      <slot />
+    </Prose>
   </div>
 </BaseLayout>
