--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -139,7 +139,7 @@ import icons from '../components/launcher/icons';
                     <div class="text-left">
                       <div class="flex items-center gap-x-1.5">
                         <a
-                          href="https://reatloop.com"
+                          href="https://reactloop.com"
                           target="_blank"
                           rel="noreferrer noopener nofollow"
                           class="inline-block font-bold">React Loop</a
