--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -12,7 +12,12 @@
 	prose-p:text-black
   prose-a:text-blue-600
 	prose-code:text-black
-	prose-code:bg-gray-200 prose-code:font-mono
+	prose-code:bg-inherit
+	prose-code:font-thin
+	prose-code:text-xs
+	prose-code:italic
+	prose-code:before:content-none
+	prose-code:after:content-none
 	prose-ul:list-disc prose-ul:pl-4
 	prose-strong:text-black
 	prose-ruby:text-black
