html-canvas-svg

--- a/src/pages/experiments.astro
+++ b/src/pages/experiments.astro
@@ -89,7 +89,7 @@ const pageTitle = "experiments";
         }
 
     </style>
-    
+
     <div class="standard-article">
         <div class="explist">
             <a href="/experiments/seam" class="shadow hover">
@@ -115,6 +115,11 @@ const pageTitle = "experiments";
             <a href="/experiments/particles" class="shadow hover">
                 <span class="label">P</span>
                 <span class="description">particles</span>
+                <span class="counter fill-low"></span>
+            </a>
+            <a href="/experiments/html-svg-canvas" class="shadow hover">
+                <span class="label">HSC</span>
+                <span class="description text-left">&rarr;html &rarr;svg &rarr;canvas</span>
                 <span class="counter fill-low"></span>
             </a>
         </div>
